[tool.poetry]
name = "construct"
version = "0.1.0"
description = ""
authors = ["Vasanth Sarathy <vsarathy@sift.net>"]

[tool.poetry.scripts]
con = 'construct.cli:main'

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
clingo = "^5.5.1"
pandas = "^1.3.5"
jupyter = "^1.0.0"
ipykernel = "^6.6.0"
pynvim = "^0.4.3"
click-config-file = "^0.6.0"
pyperplan = "^2.0"
pexpect = "^4.8.0"
pddlgym = {path = "../pddlgym"}
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
